--- a/acme/ports/games/goldengate/tasks/main.yml
+++ b/acme/ports/games/goldengate/tasks/main.yml
@@ -1,4 +1,6 @@
 - block:
+    - include_role:
+        name: wine
     - include_tasks: "install_image.yml"
       when: image is defined
     - include_tasks: "install_{{ installer.subtype }}.yml"
