--- a/acme/ports/games/aceventura/tasks/run.yml
+++ b/acme/ports/games/aceventura/tasks/run.yml
@@ -1,3 +1,11 @@
+- copy:
+    src: "{{ data_folder }}/acegame.sav"
+    dest: "{{ app_folder }}/"
+
 - wine:
     exec: "{{ app_folder }}/Ace.exe"
     virtual_desktop: "800x600"
+
+- copy:
+    src: "{{ app_folder }}/acegame.sav"
+    dest: "{{ data_folder }}/"
