--- a/acme/ports/games/aceventura/tasks/run.yml
+++ b/acme/ports/games/aceventura/tasks/run.yml
@@ -1,11 +1,15 @@
 - copy:
-    src: "{{ data_folder }}/acegame.sav"
+    src: "{{ item }}"
     dest: "{{ app_folder }}/"
+  with_fileglob:
+      - "{{ data_folder }}/*.sav"
 
 - wine:
     exec: "{{ app_folder }}/Ace.exe"
     virtual_desktop: "800x600"
 
 - copy:
-    src: "{{ app_folder }}/acegame.sav"
-    dest: "{{ data_folder }}/"
+      src: "{{ item }}"
+      dest: "{{ data_folder }}/"
+  with_fileglob:
+      - "{{ app_folder }}/*.sav"
