--- a/acme/ports/games/goldengate/tasks/install_image.yml
+++ b/acme/ports/games/goldengate/tasks/install_image.yml
@@ -6,3 +6,7 @@
 - copy:
     src: GOLDENGA.EXE
     dest: "{{ app_folder }}"
+
+- wine:
+    recipe: "{{ wine_recipe }}"
+    exec: "{{ app_folder }}/QTIME32/QT32INST.EXE"
