feature: travis support

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 install:
   - pip install -e .
 before_script:
-  - sudo apt-get -y install wine-stable
+  - sudo apt-get -y install wine64
 script:
   - pytest tests
