--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
+dist: xenial
 language: python
 install:
   - pip install -e .
 before_script:
-  - sudo apt-get -y install wine64
+  - sudo dpkg --add-architecture i386
+  - wget -O - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
+  - sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'
+  - sudo apt update
+  - sudo apt install --install-recommends winehq-stable
 script:
   - pytest tests
