--- a/acme/install.yml
+++ b/acme/install.yml
@@ -1,6 +1,6 @@
-- hosts: 127.0.0.1
-  connection: local
+- hosts: all
   gather_facts: yes  # TODO: do one-time facts gathering as part of a yag install
+  # connection: local
 
   environment:
     WINE_BODEGA: "{{ wine.bodega }}"
