source not required, upd readme, minor changes

--- a/acme/ports/games/3skulls_remake/info.yml
+++ b/acme/ports/games/3skulls_remake/info.yml
@@ -1,4 +1,4 @@
-name: "Fenimore Fillmore: 3 Skulls of the Toltecs"
+name: "Fenimore Fillmore: 3 Skulls of the Toltecs (remake)"
 year: 2019
 description: remake of the original game with improved graphics
 genres:
