--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: python
 install:
   - pip install -e .
 before_script:
+  - apt-get update
   - yag install wine
   - yag install innoextract
 script:
