--- a/acme/ansible.cfg
+++ b/acme/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 library        = ./library
-module_utils   = ./module_utils
+module_utils   = ./library/utils
 
 inject_facts_as_vars = True
 
