--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ dist: bionic
 language: python
 before_install:
   - sudo apt-get update
-  - pip install pip-compile-multi
-  - pip-compile-multi -d requirements
 install:
-  - pip install -r requirements/base.txt -r requirements/test.txt
+  - pip install flake8 pytest
   - pip install -e .
 before_script:
   - yag install wine
